Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE HTML>
+<html>
+  <head>
+    
+    
+  </head>
+  
+  <body>
+    <h1>
+      This is the title
+    </h1>
+    <p>
+      Would you just look at my lovely opening paragraph?
+    </p>
+    <p>
+      Look - here's another one!
+    </p>
+  </body>
+</html>
